--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeyU Landing Page — #2 PSD To HTML Coversion</title>
+    <title>Simplest WhatsApp Status Donwnloader - AdFree</title>
 
     <!-- Favicon -->
 
@@ -43,22 +43,22 @@
     <!-- Required Social Preview MetaTags -->
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="HeyU Landing Page — #2 PSD To HTML Coversion" />
+    <meta name="title" content="Simplest WhatsApp Status Donwnloader - AdFree" />
     <meta
       name="description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="Status World is the simplest whatsapp status downloader app where you can download share and view any whatsapp status. You can also directly message to anyone without saving their whatsapp number"
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alnahian2003.github.io/heyu" />
+    <meta property="og:url" content="http://www.status-world.com/" />
     <meta
       property="og:title"
       content="HeyU Landing Page — #2 PSD To HTML Coversion"
     />
     <meta
       property="og:description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="Status World is the simplest whatsapp status downloader app where you can download share and view any whatsapp status. You can also directly message to anyone without saving their whatsapp number"
     />
     <meta property="og:image" content="images/preview.png" />
 
@@ -66,15 +66,15 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://alnahian2003.github.io/heyu"
+      content="http://www.status-world.com/"
     />
     <meta
       property="twitter:title"
-      content="HeyU Landing Page — #2 PSD To HTML Coversion"
+      content="Simplest WhatsApp Status Donwnloader - AdFree"
     />
     <meta
       property="twitter:description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="Status World is the simplest whatsapp status downloader app where you can download share and view any whatsapp status. You can also directly message to anyone without saving their whatsapp number"
     />
     <meta property="twitter:image" content="images/preview.png" />
 
@@ -102,15 +102,15 @@
     <header id="home">
       <nav>
         <div class="navbar-logo">
-          <a href="#" class="logo">HeyU</a>
+          <a href="#" class="logo">Status world</a>
         </div>
         <div id="navbar">
           <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#features">FEATURES</a></li>
-            <li><a href="#testimonial">TESTIMONIAL</a></li>
-            <li><a href="#howto">HOW TO</a></li>
-            <li><a href="#download">DOWNLOAD</a></li>
+            <!-- <li><a href="#testimonial">TESTIMONIAL</a></li> -->
+            <!-- <li><a href="#howto">HOW TO</a></li> -->
+            <!-- <li><a href="#download">DOWNLOAD</a></li> -->
           </ul>
         </div>
         <div id="mobileNav">
@@ -123,9 +123,9 @@
             >
             <a href="#home" onclick="closeNav()">HOME</a>
             <a href="#features" onclick="closeNav()">FEATURES</a>
-            <a href="#testimonial" onclick="closeNav()">TESTIMONIAL</a>
-            <a href="#howto" onclick="closeNav()">HOW TO</a>
-            <a href="#download" onclick="closeNav()">DOWNLOAD</a>
+            <!-- <a href="#testimonial" onclick="closeNav()">TESTIMONIAL</a> -->
+            <!-- <a href="#howto" onclick="closeNav()">HOW TO</a> -->
+            <!-- <a href="#download" onclick="closeNav()">DOWNLOAD</a> -->
           </div>
         </div>
       </nav>
@@ -133,18 +133,15 @@
         <div class="row">
           <div class="col span_1_of_2">
             <div class="hero-description">
-              <h1>
-                Simple, safe <br />
-                & beautiful.
-              </h1>
+              <h2>
+                Simplest WhatsApp Status Downloader App - AdFree
+              </h2>
               <p>
-                With <span class="bold-text">HeyU</span>, you'll get fast,
-                simple, secure messaging!
+                Simplest App to download, reshare status and directly chat without saving any number.
               </p>
-
-              <a href="#download" class="btn"
-                ><span class="download-btn"> Download Now</span></a
-              >
+              <a href="https://play.google.com/store/apps/details?id=whatsappstatussaver.statusdownloader.statussaver">
+                <img src="images/google_play_image.svg" alt="" width="300" height="400"
+              /></a>
             </div>
           </div>
           <div class="col span_1_of_2">
@@ -190,24 +187,22 @@
       <div class="row">
         <div class="col span_1_of_2">
           <div class="features-images">
-            <img class="features_1" src="images/features1.png" alt="" />
+            <img class="features_1" src="images/1.png" alt="" />
           </div>
         </div>
         <div class="col span_1_of_2">
           <div class="section-description features-description col1">
             <h2 class="stylish_heading">
-              Easy Messaging <span class="red_dot">.</span>
+              Simplest Status Downloader Ever<span class="red_dot">.</span>
             </h2>
             <p class="little-description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              You can download any whatsapp status whether it is video or image and you can also share and reshare these statuses with best experience and simplest UI.
+              You can also directly chat with any one on whatsapp without saving their number.
             </p>
           </div>
         </div>
       </div>
-      <div class="row second-features-row">
+      <!-- <div class="row second-features-row">
         <div class="col span_1_of_2">
           <div class="section-description features-description">
             <h2 class="stylish_heading">
@@ -226,13 +221,13 @@
             <img class="features_3" src="images/features2.png" alt="" />
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
     <!-- End: Features Section -->
 
     <!-- Testimonial Section -->
-    <section id="testimonial">
-      <h2 class="stylish_heading">
+    <!-- <section id="testimonial"> -->
+      <!-- <h2 class="stylish_heading">
         What people say <span class="red_dot">.</span>
       </h2>
       <div class="row">
@@ -287,13 +282,13 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div> -->
+    <!-- </section> -->
     <!-- End: Testimonial Section -->
 
     <!-- How To Section -->
-    <section id="howto">
-      <div class="row">
+    <!-- <section id="howto"> -->
+      <!-- <div class="row">
         <div class="col span_1_of_3 first-col">
           <div class="first-item">
             <div class="item-description">
@@ -405,13 +400,13 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div> -->
+    <!-- </section> -->
     <!-- End: How To Section -->
 
     <!-- Subscribe Section -->
-    <section id="subscribe">
-      <div class="row">
+    <!-- <section id="subscribe"> -->
+      <!-- <div class="row">
         <h2 class="stylish_heading">
           Subscribe to our newsletter <span class="red_dot">.</span>
         </h2>
@@ -428,12 +423,12 @@
           required
         />
         <input type="submit" class="btn subscribe-btn" value="Subscribe" />
-      </div>
-    </section>
+      </div> -->
+    <!-- </section> -->
     <!-- End: Subscribe Section -->
 
     <!-- Download The App Section -->
-    <section id="download">
+    <!-- <section id="download">
       <div class="row">
         <img class="app-logo" src="images/app_logo.png" alt="" />
         <h2 class="stylish_heading">
@@ -448,11 +443,11 @@
           <img src="images/appstore.png" alt=""
         /></a>
       </div>
-    </section>
+    </section> -->
     <!-- End: Download The App Section -->
 
     <!-- Footer Section -->
-    <section id="footer">
+    <!-- <section id="footer">
       <div class="links">
         <ul>
           <li><a href="#home">HOME</a></li>
@@ -462,14 +457,7 @@
           <li><a href="#download">DOWNLOAD</a></li>
         </ul>
       </div>
-      <div class="language-option">
-        <select name="Languages">
-          <option value="English" selected>ENGLISH</option>
-          <option value="বাংলা">বাংলা</option>
-          <option value="हिन्दी">हिन्दी</option>
-        </select>
-      </div>
-    </section>
+    </section> -->
     <!-- End: Footer Section -->
 
     <!-- Required JavaScript Files & CDN -->
